--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,6 +3,8 @@ kind: Component
 metadata:
   name: go-microservice-backstage
   description: Go Microservice using Backstage
+  tags:
+  - go
   annotations: 
     github.com/project-slug: seizadi/go-microservice-backstage
     backstage.io/source-ref: "https://github.com/seizadi/go-microservice-backstage"
